# Generic_Pointer

./: CMakeLists.txt  readme.txt
include/: graal.h
src/: min.cpp
